force-app/main/default/objects/ReturnOrder/ReturnOrder.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>