force-app/main/default/objects/ReturnOrder/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>CustomAddress__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>ReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>