force-app/main/default/objects/ReturnOrder/fields/BillingBlocked__c.field-meta.xml
<CustomField>
    <fullName>BillingBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Blocked</label>
    <type>Checkbox</type>
</CustomField>