force-app/main/default/objects/ReturnOrder/fields/BillingBlockReason__c.field-meta.xml
<CustomField>
    <fullName>BillingBlockReason__c</fullName>
    <label>Billing Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R1</fullName>
                <label>Retourenprüfung AHS</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>Check Exchange Rate</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Missing Calculation</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Missing Feedback</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Incomplete Pricing</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Check Payment Terms</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Check Delivery Terms</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Check Credit Note</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Check Direct Debit</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Navision Block</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Price Change Approval</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>NE Note Determination Error</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Coverage Without End Date</label>
            </value>
            <value>
                <fullName>93</fullName>
                <label>Coverage Without Fixed Rate</label>
            </value>
            <value>
                <fullName>94</fullName>
                <label>Coverage Quantity Below Order Quantity</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>Exchange Rate Conversion Error</label>
            </value>
            <value>
                <fullName>96</fullName>
                <label>No Goods Issue/Goods Receipt Posting</label>
            </value>
            <value>
                <fullName>97</fullName>
                <label>Order Quantity Below Ordered Quantity</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Missing Purchase Exchange Rate</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Missing Base Key</label>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>