force-app/main/default/objects/ReturnOrder/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders (Bill To)</relationshipLabel>
    <relationshipName>ReturnOrdersBillTo</relationshipName>
    <type>Lookup</type>
</CustomField>