force-app/main/default/objects/ReturnOrder/fields/BudgetCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetCreditAmount__c</fullName>
    <inlineHelpText>Amount credited back to the budget user of the referenced order. Blank when no credit applies (no budget order, previous year, no order reference).</inlineHelpText>
    <label>Budget Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>