force-app/main/default/objects/ReturnOrder/fields/BudgetCreditedAt__c.field-meta.xml
<CustomField>
    <fullName>BudgetCreditedAt__c</fullName>
    <inlineHelpText>Set once when the credit was posted.</inlineHelpText>
    <label>Budget Credited At</label>
    <type>DateTime</type>
</CustomField>