force-app/main/default/objects/ReturnOrder/fields/CreditIssuance__c.field-meta.xml
<CustomField>
    <fullName>CreditIssuance__c</fullName>
    <inlineHelpText>Indicates whether the customer gets money back for this return. Empty means: not decided yet.</inlineHelpText>
    <label>Credit Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WITH</fullName>
                <label>With credit</label>
            </value>
            <value>
                <fullName>WITHOUT</fullName>
                <label>Without credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>