force-app/main/default/objects/ReturnOrder/fields/ERPReturnOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPReturnOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>ERP Return Order Number</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>