force-app/main/default/objects/ReturnOrder/fields/LegacyInvoice__c.field-meta.xml
<CustomField>
    <fullName>LegacyInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy Invoice</label>
    <referenceTo>Invoice</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>ReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>