force-app/main/default/objects/ReturnOrder/fields/NoDocumentReason__c.field-meta.xml
<CustomField>
    <fullName>NoDocumentReason__c</fullName>
    <inlineHelpText>Why there is no order and no invoice as reference. One sentence is enough.</inlineHelpText>
    <label>No Document Reason</label>
    <type>TextArea</type>
</CustomField>