force-app/main/default/objects/ReturnOrder/fields/OrganizationDivision__c.field-meta.xml
<CustomField>
    <fullName>OrganizationDivision__c</fullName>
    <defaultValue>&apos;10&apos;</defaultValue>
    <label>Organization Division</label>
    <length>5</length>
    <type>Text</type>
</CustomField>