force-app/main/default/objects/ReturnOrder/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders (Payer)</relationshipLabel>
    <relationshipName>ReturnOrdersPayer</relationshipName>
    <type>Lookup</type>
</CustomField>