force-app/main/default/objects/ReturnOrder/fields/PurchaseOrderbyCustomer__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderbyCustomer__c</fullName>
    <description>externe Kundenreferenz, die auf Kundenwunsch auf jeglichen Dokumenten abgebildet werden.</description>
    <label>Purchase Order by Customer</label>
    <length>35</length>
    <type>Text</type>
</CustomField>