force-app/main/default/objects/ReturnOrder/fields/ReferenceType__c.field-meta.xml
<CustomField>
    <fullName>ReferenceType__c</fullName>
    <inlineHelpText>What the return refers to. Without a document a reason is required.</inlineHelpText>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORDER</fullName>
                <label>Order</label>
            </value>
            <value>
                <fullName>INVOICE</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <label>No document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>