force-app/main/default/objects/ReturnOrder/fields/RequestedPickupDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedPickupDate__c</fullName>
    <label>Requested Pickup Date</label>
    <type>DateTime</type>
</CustomField>