force-app/main/default/objects/ReturnOrder/fields/ReturnOrderType__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrderType__c</fullName>
    <label>Return Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZREA</fullName>
                <label>Retoure AHS</label>
            </value>
            <value>
                <fullName>ZREI</fullName>
                <label>Retoure intern</label>
            </value>
            <value>
                <fullName>ZREM</fullName>
                <label>Retoure Maschine</label>
            </value>
            <value>
                <fullName>ZRE</fullName>
                <label>Retoure</label>
            </value>
            <value>
                <fullName>ZR2</fullName>
                <label>Erw. Retoure</label>
            </value>
            <value>
                <fullName>ZREL</fullName>
                <label>Retoure intern (LF)</label>
            </value>
            <value>
                <fullName>ZRES</fullName>
                <label>Retoure RKV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>