force-app/main/default/objects/ReturnOrder/fields/ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>ReturnReason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R01</fullName>
                <label>RE Annahmeverweigerung</label>
            </value>
            <value>
                <fullName>R02</fullName>
                <label>RE Annahmeverweigerung Nachlieferung</label>
            </value>
            <value>
                <fullName>R03</fullName>
                <label>RE Annahmeverweigerung Ladungsträger</label>
            </value>
            <value>
                <fullName>R04</fullName>
                <label>RE Beschädigung</label>
            </value>
            <value>
                <fullName>R05</fullName>
                <label>RE Verladefehler Paketdienst</label>
            </value>
            <value>
                <fullName>R06</fullName>
                <label>RE Empfänger unbekannt</label>
            </value>
            <value>
                <fullName>R07</fullName>
                <label>RE Falschanlieferung</label>
            </value>
            <value>
                <fullName>R08</fullName>
                <label>RE Falsche Bestellung Kunde</label>
            </value>
            <value>
                <fullName>R09</fullName>
                <label>RE Falsche Eingabe JJD</label>
            </value>
            <value>
                <fullName>R10</fullName>
                <label>RE Falsche Verladung JJD</label>
            </value>
            <value>
                <fullName>R11</fullName>
                <label>RE Bestellfehler GL</label>
            </value>
            <value>
                <fullName>R12</fullName>
                <label>RE Kunde nicht angetroffen</label>
            </value>
            <value>
                <fullName>R13</fullName>
                <label>RE Luftzieher</label>
            </value>
            <value>
                <fullName>R14</fullName>
                <label>RE MHD</label>
            </value>
            <value>
                <fullName>R15</fullName>
                <label>RE Nicht aus Filiale abgeholt</label>
            </value>
            <value>
                <fullName>R16</fullName>
                <label>RE Packfehler</label>
            </value>
            <value>
                <fullName>R17</fullName>
                <label>RE Etikettierfehler</label>
            </value>
            <value>
                <fullName>R18</fullName>
                <label>RE Qualitätsmängel</label>
            </value>
            <value>
                <fullName>R19</fullName>
                <label>RE Retoure intern</label>
            </value>
            <value>
                <fullName>R20</fullName>
                <label>RE Rückgabe Kundenwunsch</label>
            </value>
            <value>
                <fullName>R21</fullName>
                <label>RE Sortenwechsel Kunde</label>
            </value>
            <value>
                <fullName>R22</fullName>
                <label>RE Veranstaltung</label>
            </value>
            <value>
                <fullName>SIC</fullName>
                <label>Sicherstellung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>