force-app/main/default/objects/ReturnOrder/fields/ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ShippingCondition__c</fullName>
    <description>How the goods come back: parcel service, freight forwarder or customer pickup.</description>
    <label>Shipping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCondition</valueSetName>
    </valueSet>
</CustomField>