force-app/main/default/objects/ReturnOrder/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>ReturnOrdersShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>