force-app/main/default/objects/ReturnOrder/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders (Sold To)</relationshipLabel>
    <relationshipName>ReturnOrdersSoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>