force-app/main/default/objects/ReturnOrder/validationRules/ReturnOrderReferenceTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnOrderReferenceTypeRequired</fullName>
    <active>true</active>
    <description>A reference type is required before the return order is sent.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status , &quot;Gesendet&quot;),
  ISPICKVAL( ReferenceType__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>ReferenceType__c</errorDisplayField>
    <errorMessage>Choose a reference type: order, invoice or no document. Without a reference type the return order is rejected.</errorMessage>
</ValidationRule>