force-app/main/default/objects/ReturnOrder/listViews/All_ReturnOrders.listView-meta.xml
<ListView>
    <fullName>All_ReturnOrders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Case</columns>
    <columns>SourceLocation</columns>
    <columns>ReturnedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Rückgabeaufträge</label>
</ListView>