force-app/main/default/objects/ReturnOrder/listViews/My_ReturnOrders.listView-meta.xml
<ListView>
    <fullName>My_ReturnOrders</fullName>
    <filterScope>Mine</filterScope>
    <label>Meine Rückgabeaufträge</label>
</ListView>